@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0, which is available at
@@ -13,7 +13,6 @@
  *
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  */
-
 import java.io.*;
 import java.net.*;
 import com.sun.ejte.ccl.reporter.*;
@@ -27,8 +26,7 @@ public class WebTest {
 
     private static final String TEST_NAME = "jsp-error-page-servlet-error-exception";
 
-    private static SimpleReporterAdapter stat
-        = new SimpleReporterAdapter("appserv-tests");
+    private static SimpleReporterAdapter stat = new SimpleReporterAdapter("appserv-tests");
 
     private String host;
     private String port;
@@ -39,54 +37,45 @@ public class WebTest {
         port = args[1];
         contextRoot = args[2];
     }
-    
+
     public static void main(String[] args) {
         stat.addDescription("Unit test for Bugzilla 31659");
         WebTest webTest = new WebTest(args);
         webTest.doTest();
-	stat.printSummary();
+        stat.printSummary();
     }
 
     public void doTest() {
-
-        InputStream is = null;
-        BufferedReader bis = null;
         try {
-            Socket s = new Socket(host, new Integer(port).intValue());
+            Socket s = new Socket(host, Integer.valueOf(port));
             OutputStream os = s.getOutputStream();
             String requestUri = contextRoot + "/causeError.jsp";
 
             System.out.println("GET " + requestUri + " HTTP/1.0");
             os.write(("GET " + requestUri + " HTTP/1.0\n").getBytes());
             os.write("\n".getBytes());
-        
-            is = s.getInputStream();
-            bis = new BufferedReader(new InputStreamReader(is));
-            String line = null;
-            int count = 0;
-            while ((line = bis.readLine()) != null) {
-                System.out.println(line);
-                if (line.equals("java.lang.NullPointerException")) {
-                    count++;
+
+            try (InputStream is = s.getInputStream(); BufferedReader bis = new BufferedReader(new InputStreamReader(is))) {
+                
+                String line = null;
+                int count = 0;
+                while ((line = bis.readLine()) != null) {
+                    System.out.println(line);
+                    if (line.contains("java.lang.NullPointerException")) {
+                        count++;
+                    }
+                }
+    
+                if (count == 2) {
+                    stat.addStatus(TEST_NAME, stat.PASS);
+                } else {
+                    stat.addStatus(TEST_NAME, stat.FAIL);
                 }
             }
-            
-            if (count == 2) {
-                stat.addStatus(TEST_NAME, stat.PASS);
-            } else {
-                stat.addStatus(TEST_NAME, stat.FAIL);
-            }
 
-        } catch( Exception ex) {
+        } catch (Exception ex) {
             ex.printStackTrace();
             stat.addStatus(TEST_NAME, stat.FAIL);
-        } finally {
-            try {
-                if (is != null) is.close();
-            } catch (IOException ex) {}
-            try {
-                if (bis != null) bis.close();
-            } catch (IOException ex) {}
         }
     }
 
